replace all image link to absolute

--- a/catalogue/cate/7.html
+++ b/catalogue/cate/7.html
@@ -10,34 +10,34 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/7/38.html"><img width="185" alt="Saigon lady 2" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/saigonlady2.jpg"></a>
+					<a href="../catedetail/7/38.html"><img width="185" alt="Saigon lady 2" src="/assetsadmin/imagesupload/image2/saigonlady2.jpg"></a>
 					<h4></h4>Saigon lady 2				</li>
 							<li >
-					<a href="../catedetail/7/37.html"><img width="185" alt="Saigon lady 1" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/DamedeSaigon.JPG"></a>
+					<a href="../catedetail/7/37.html"><img width="185" alt="Saigon lady 1" src="/assetsadmin/imagesupload/image2/DamedeSaigon.JPG"></a>
 					<h4></h4>Saigon lady 1				</li>
 							<li class="last">
-					<a href="../catedetail/7/36.html"><img width="185" alt="Hue lady" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/DameDeHanoi.JPG"></a>
+					<a href="../catedetail/7/36.html"><img width="185" alt="Hue lady" src="/assetsadmin/imagesupload/image2/DameDeHanoi.JPG"></a>
 					<h4></h4>Hue lady				</li>
 							<li >
-					<a href="../catedetail/7/35.html"><img width="185" alt="Hanoi lady" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/DamedeNhaTrang.JPG"></a>
+					<a href="../catedetail/7/35.html"><img width="185" alt="Hanoi lady" src="/assetsadmin/imagesupload/image2/DamedeNhaTrang.JPG"></a>
 					<h4></h4>Hanoi lady				</li>
 							<li >
-					<a href="../catedetail/7/34.html"><img width="185" alt="in the garden" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/photo%20copy.jpg"></a>
+					<a href="../catedetail/7/34.html"><img width="185" alt="in the garden" src="/assetsadmin/imagesupload/slideshowhome/photo%20copy.jpg"></a>
 					<h4></h4>in the garden				</li>
 							<li class="last">
-					<a href="../catedetail/7/33.html"><img width="185" alt="hide and seek" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/1.jpg"></a>
+					<a href="../catedetail/7/33.html"><img width="185" alt="hide and seek" src="/assetsadmin/imagesupload/image2/1.jpg"></a>
 					<h4></h4>hide and seek				</li>
 							<li >
-					<a href="../catedetail/7/32.html"><img width="185" alt="shy 2" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/3%202.jpg"></a>
+					<a href="../catedetail/7/32.html"><img width="185" alt="shy 2" src="/assetsadmin/imagesupload/image2/3%202.jpg"></a>
 					<h4></h4>shy 2				</li>
 							<li >
-					<a href="../catedetail/7/31.html"><img width="185" alt="shy1" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/5.jpg"></a>
+					<a href="../catedetail/7/31.html"><img width="185" alt="shy1" src="/assetsadmin/imagesupload/image2/5.jpg"></a>
 					<h4></h4>shy1				</li>
 							<li class="last">
-					<a href="../catedetail/7/30.html"><img width="185" alt="shy" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/4.jpg"></a>
+					<a href="../catedetail/7/30.html"><img width="185" alt="shy" src="/assetsadmin/imagesupload/image2/4.jpg"></a>
 					<h4></h4>shy				</li>
 							<li >
-					<a href="../catedetail/7/29.html"><img width="185" alt="hide and seek" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/2.jpg"></a>
+					<a href="../catedetail/7/29.html"><img width="185" alt="hide and seek" src="/assetsadmin/imagesupload/image2/2.jpg"></a>
 					<h4></h4>hide and seek				</li>
 
 </ul>
