--- a/catalogue/cate/9.html
+++ b/catalogue/cate/9.html
@@ -10,28 +10,28 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/9/77.html"><img width="185" alt="Sleeper in the clouds (Blanket pattern)" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/SleeperIntheClouds.jpg"></a>
+					<a href="../catedetail/9/77.html"><img width="185" alt="Sleeper in the clouds (Blanket pattern)" src="/assetsadmin/imagesupload/image/SleeperIntheClouds.jpg"></a>
 					<h4></h4>Sleeper in the clouds (Blanket pattern)				</li>
 							<li >
-					<a href="../catedetail/9/65.html"><img width="185" alt="The look" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Thelook.jpeg"></a>
+					<a href="../catedetail/9/65.html"><img width="185" alt="The look" src="/assetsadmin/imagesupload/image/Thelook.jpeg"></a>
 					<h4></h4>The look				</li>
 							<li class="last">
-					<a href="../catedetail/9/64.html"><img width="185" alt="On old brick" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/On%20old%20bricks.jpeg"></a>
+					<a href="../catedetail/9/64.html"><img width="185" alt="On old brick" src="/assetsadmin/imagesupload/image/On%20old%20bricks.jpeg"></a>
 					<h4></h4>On old brick				</li>
 							<li >
-					<a href="../catedetail/9/63.html"><img width="185" alt="After shower" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/After%20shower%20.jpeg"></a>
+					<a href="../catedetail/9/63.html"><img width="185" alt="After shower" src="/assetsadmin/imagesupload/image/After%20shower%20.jpeg"></a>
 					<h4></h4>After shower				</li>
 							<li >
-					<a href="../catedetail/9/62.html"><img width="185" alt="Sleeping beauty" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/SleepingBeauty.jpeg"></a>
+					<a href="../catedetail/9/62.html"><img width="185" alt="Sleeping beauty" src="/assetsadmin/imagesupload/image/SleepingBeauty.jpeg"></a>
 					<h4></h4>Sleeping beauty				</li>
 							<li class="last">
-					<a href="../catedetail/9/61.html"><img width="185" alt="Dream under the clouds" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/dream%20under%20the%20clouds.jpeg"></a>
+					<a href="../catedetail/9/61.html"><img width="185" alt="Dream under the clouds" src="/assetsadmin/imagesupload/image/dream%20under%20the%20clouds.jpeg"></a>
 					<h4></h4>Dream under the clouds				</li>
 							<li >
-					<a href="../catedetail/9/54.html"><img width="185" alt="Touch The Sky" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/TouchTheSky2.jpg"></a>
+					<a href="../catedetail/9/54.html"><img width="185" alt="Touch The Sky" src="/assetsadmin/imagesupload/image1/TouchTheSky2.jpg"></a>
 					<h4></h4>Touch The Sky				</li>
 							<li >
-					<a href="../catedetail/9/47.html"><img width="185" alt="Lady with Ao Dai" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/AoDai.png"></a>
+					<a href="../catedetail/9/47.html"><img width="185" alt="Lady with Ao Dai" src="/assetsadmin/imagesupload/image/AoDai.png"></a>
 					<h4></h4>Lady with Ao Dai				</li>
 
 </ul>
