--- a/catalogue/catedetail/12/80.html
+++ b/catalogue/catedetail/12/80.html
@@ -74,7 +74,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Plum Flower ( Fleur de prunier )" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/FleurDePrunier.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/FleurDePrunier.JPG">
 			</a>
 		</div>
 	</div>
