--- a/catalogue/catedetail/18/86.html
+++ b/catalogue/catedetail/18/86.html
@@ -74,7 +74,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Tet Festival - Fête du Têt" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/fetedutet.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/fetedutet.jpg">
 			</a>
 		</div>
 	</div>
