--- a/catalogue/catedetail/18/89.html
+++ b/catalogue/catedetail/18/89.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="No title (Sans titre)" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/SansTitre.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/SansTitre.JPG">
 			</a>
 		</div>
 	</div>
