--- a/catalogue/catedetail/5/42.html
+++ b/catalogue/catedetail/5/42.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Dance alone" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/page%2020%20TAYNGUYEN.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/slideshowhome/page%2020%20TAYNGUYEN.jpg">
 			</a>
 		</div>
 	</div>
