--- a/catalogue/catedetail/7/34.html
+++ b/catalogue/catedetail/7/34.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="in the garden" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/photo%20copy.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/slideshowhome/photo%20copy.jpg">
 			</a>
 		</div>
 	</div>
