--- a/catalogue/catedetail/8/43.html
+++ b/catalogue/catedetail/8/43.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Exposition Regard(s) sur la Femme - Serris (France)" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG">
 			</a>
 		</div>
 	</div>
