--- a/catalogue/catedetail/8/44.html
+++ b/catalogue/catedetail/8/44.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Exhibition in Galerie BDMC - Paris" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/2.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/slideshowhome/2.jpg">
 			</a>
 		</div>
 	</div>
