--- a/catalogue/catedetail/8/45.html
+++ b/catalogue/catedetail/8/45.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Exhibition in Bog Art Gallery - Brussels (Belguim)" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/afficheExpoBrussels.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/afficheExpoBrussels.jpg">
 			</a>
 		</div>
 	</div>
