--- a/catalogue/catedetail/8/46.html
+++ b/catalogue/catedetail/8/46.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Exposition D'ici... d'Asie... d'ailleurs - Hôpital Vaugirard - Paris (France)" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/afficheIciAsieAilleurs.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/afficheIciAsieAilleurs.jpg">
 			</a>
 		</div>
 	</div>
