--- a/catalogue/catedetail/8/55.html
+++ b/catalogue/catedetail/8/55.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg">
 			</a>
 		</div>
 	</div>
