--- a/catalogue/catedetail/9/54.html
+++ b/catalogue/catedetail/9/54.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Touch The Sky" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/TouchTheSky2.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/TouchTheSky2.jpg">
 			</a>
 		</div>
 	</div>
