--- a/exhibiton/cate/10.html
+++ b/exhibiton/cate/10.html
@@ -9,19 +9,19 @@ category: exhibition
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/10/57.html"><img width="185" alt="Les Dormeuses du Val" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/Dormeuses%20du%20Val%20.jpg"></a>
+					<a href="../catedetail/10/57.html"><img width="185" alt="Les Dormeuses du Val" src="/assetsadmin/imagesupload/exhibitions/Dormeuses%20du%20Val%20.jpg"></a>
 					<h4></h4>Les Dormeuses du Val				</li>
 							<li >
-					<a href="../catedetail/10/56.html"><img width="185" alt="EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg"></a>
+					<a href="../catedetail/10/56.html"><img width="185" alt="EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION" src="/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg"></a>
 					<h4></h4>EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION				</li>
 							<li class="last">
-					<a href="../catedetail/10/53.html"><img width="185" alt="Last exhibition - Dernières expositions" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG"></a>
+					<a href="../catedetail/10/53.html"><img width="185" alt="Last exhibition - Dernières expositions" src="/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG"></a>
 					<h4></h4>Last exhibition - Dernières expositions				</li>
 							<li >
-					<a href="../catedetail/10/52.html"><img width="185" alt="Salon du Printemps - 22-04-2015 | 12-06-2015 - Aulnay-sous-Bois" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/Invitation-Salon-d-Art-de-Printemps-A-Aulnay001.jpg"></a>
+					<a href="../catedetail/10/52.html"><img width="185" alt="Salon du Printemps - 22-04-2015 | 12-06-2015 - Aulnay-sous-Bois" src="/assetsadmin/imagesupload/exhibitions/Invitation-Salon-d-Art-de-Printemps-A-Aulnay001.jpg"></a>
 					<h4></h4>Salon du Printemps - 22-04-2015 | 12-06-2015 - Aulnay-sous-Bois				</li>
 							<li >
-					<a href="../catedetail/10/49.html"><img width="185" alt="Exposition "D'ici... d'Asie... d'ailleurs" de Nguyen Tay" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/afficheIciAsieAilleurs.jpg"></a>
+					<a href="../catedetail/10/49.html"><img width="185" alt="Exposition "D'ici... d'Asie... d'ailleurs" de Nguyen Tay" src="/assetsadmin/imagesupload/exhibitions/afficheIciAsieAilleurs.jpg"></a>
 					<h4></h4>Exposition "D'ici... d'Asie... d'ailleurs" de Nguyen Tay				</li>
 
 </ul>
