--- a/exhibiton/cate/16.html
+++ b/exhibiton/cate/16.html
@@ -9,13 +9,13 @@ category: exhibition
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/16/88.html"><img width="185" alt="Exposition Aqua'r'Elles - Hôtel de Ville - Courtry" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/ExpoCourtry.jpg"></a>
+					<a href="../catedetail/16/88.html"><img width="185" alt="Exposition Aqua'r'Elles - Hôtel de Ville - Courtry" src="/assetsadmin/imagesupload/image2/ExpoCourtry.jpg"></a>
 					<h4></h4>Exposition Aqua'r'Elles - Hôtel de Ville - Courtry				</li>
 							<li >
-					<a href="../catedetail/16/83.html"><img width="185" alt="03>05/02 | Festival Arts et Cultures" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/Festival%20arts%20.jpg"></a>
+					<a href="../catedetail/16/83.html"><img width="185" alt="03>05/02 | Festival Arts et Cultures" src="/assetsadmin/imagesupload/image1/Festival%20arts%20.jpg"></a>
 					<h4></h4>03>05/02 | Festival Arts et Cultures				</li>
 							<li class="last">
-					<a href="../catedetail/16/82.html"><img width="185" alt="16>31/01 | Air France's Air Office - Siège social d'Air France" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/AfficheExpoAirFrance.jpg"></a>
+					<a href="../catedetail/16/82.html"><img width="185" alt="16>31/01 | Air France's Air Office - Siège social d'Air France" src="/assetsadmin/imagesupload/image1/AfficheExpoAirFrance.jpg"></a>
 					<h4></h4>16>31/01 | Air France's Air Office - Siège social d'Air France				</li>
 
 </ul>
