--- a/exhibiton/catedetail/10/49.html
+++ b/exhibiton/catedetail/10/49.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Exposition "D'ici... d'Asie... d'ailleurs" de Nguyen Tay" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/afficheIciAsieAilleurs.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/afficheIciAsieAilleurs.jpg">
 			</a>
 		</div>
 	</div>
