--- a/exhibiton/catedetail/10/52.html
+++ b/exhibiton/catedetail/10/52.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Salon du Printemps - 22-04-2015 | 12-06-2015 - Aulnay-sous-Bois" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/Invitation-Salon-d-Art-de-Printemps-A-Aulnay001.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/Invitation-Salon-d-Art-de-Printemps-A-Aulnay001.jpg">
 			</a>
 		</div>
 	</div>
