--- a/exhibiton/catedetail/10/53.html
+++ b/exhibiton/catedetail/10/53.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Last exhibition - Dernières expositions" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG">
 			</a>
 		</div>
 	</div>
@@ -82,7 +82,7 @@ category: exhibition
 
 	<h2>Description:</h2>
 	<br>
-	<p style="text-align: center;">Nguyen Tay's last exhibitions | Les pr&eacute;c&eacute;dentes exposition de Nguyen Tay </p><p style="text-align: center;">&nbsp;</p><p style="text-align: center;"><a href="http://www.nguyentay.art/catalogue/cate/8">Last exhibitions | Derni&egrave;res expositions </a></p><div>&nbsp;</div>
+	<p style="text-align: center;">Nguyen Tay's last exhibitions | Les pr&eacute;c&eacute;dentes exposition de Nguyen Tay </p><p style="text-align: center;">&nbsp;</p><p style="text-align: center;"><a href="/catalogue/cate/8">Last exhibitions | Derni&egrave;res expositions </a></p><div>&nbsp;</div>
 <br>
 </div>
 
