--- a/exhibiton/catedetail/13/58.html
+++ b/exhibiton/catedetail/13/58.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Salon des amateurs d'arts" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/arts.jpeg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/arts.jpeg">
 			</a>
 		</div>
 	</div>
