--- a/exhibiton/catedetail/13/59.html
+++ b/exhibiton/catedetail/13/59.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Nguyen Tay invité de l'Atelier éphémers - 28 février 2016" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/Corps%20et%20femmes.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/Corps%20et%20femmes.jpg">
 			</a>
 		</div>
 	</div>
