--- a/exhibiton/catedetail/13/87.html
+++ b/exhibiton/catedetail/13/87.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Exposition au défilé Fashion Glam Couture - Hôtel Renaissance Arc de Triomphe" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Renaissance.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/Renaissance.jpg">
 			</a>
 		</div>
 	</div>
