--- a/exhibiton/catedetail/16/82.html
+++ b/exhibiton/catedetail/16/82.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="16>31/01 | Air France's Air Office - Siège social d'Air France" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/AfficheExpoAirFrance.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/AfficheExpoAirFrance.jpg">
 			</a>
 		</div>
 	</div>
