--- a/exhibiton/catedetail/16/83.html
+++ b/exhibiton/catedetail/16/83.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="03>05/02 | Festival Arts et Cultures" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/Festival%20arts%20.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/Festival%20arts%20.jpg">
 			</a>
 		</div>
 	</div>
