--- a/exhibiton/catedetail/16/88.html
+++ b/exhibiton/catedetail/16/88.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Exposition Aqua'r'Elles - Hôtel de Ville - Courtry" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/ExpoCourtry.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/ExpoCourtry.jpg">
 			</a>
 		</div>
 	</div>
