--- a/pressbook/cate/14.html
+++ b/pressbook/cate/14.html
@@ -9,10 +9,10 @@ category: pressbook
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/14/73.html"><img width="185" alt="Un prix pour un artiste vietnamien" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/LaMarne270416.jpg"></a>
+					<a href="../catedetail/14/73.html"><img width="185" alt="Un prix pour un artiste vietnamien" src="/assetsadmin/imagesupload/image/LaMarne270416.jpg"></a>
 					<h4></h4>Un prix pour un artiste vietnamien				</li>
 							<li >
-					<a href="../catedetail/14/66.html"><img width="185" alt="Magjournal77 | 12/04/2016" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/UneJournal.jpg"></a>
+					<a href="../catedetail/14/66.html"><img width="185" alt="Magjournal77 | 12/04/2016" src="/assetsadmin/imagesupload/image/UneJournal.jpg"></a>
 					<h4></h4>Magjournal77 | 12/04/2016				</li>
 				
 </ul>
