--- a/pressbook/cate/15.html
+++ b/pressbook/cate/15.html
@@ -12,10 +12,10 @@ category: pressbook
 					<a href="../catedetail/15/76.html"><img width="185" alt="Exposition de Nguyen Tay dans Cap Vietnam" src="15.html"></a>
 					<h4></h4>Exposition de Nguyen Tay dans Cap Vietnam				</li>
 							<li >
-					<a href="../catedetail/15/75.html"><img width="185" alt="Trois artistes pour un regard sur la femme" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/LaMarne250315.jpg"></a>
+					<a href="../catedetail/15/75.html"><img width="185" alt="Trois artistes pour un regard sur la femme" src="/assetsadmin/imagesupload/image/LaMarne250315.jpg"></a>
 					<h4></h4>Trois artistes pour un regard sur la femme				</li>
 							<li class="last">
-					<a href="../catedetail/15/74.html"><img width="185" alt="Nguyen Tay expose chez ses fans" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Lamarne022015.jpg"></a>
+					<a href="../catedetail/15/74.html"><img width="185" alt="Nguyen Tay expose chez ses fans" src="/assetsadmin/imagesupload/image/Lamarne022015.jpg"></a>
 					<h4></h4>Nguyen Tay expose chez ses fans				</li>
 				
 </ul>
