--- a/pressbook/cate/17.html
+++ b/pressbook/cate/17.html
@@ -9,7 +9,7 @@ category: pressbook
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/17/84.html"><img width="185" alt="Journal La Marne | 11 jan. 2017" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/NguyenTayafficheLamarne11012017.jpg"></a>
+					<a href="../catedetail/17/84.html"><img width="185" alt="Journal La Marne | 11 jan. 2017" src="/assetsadmin/imagesupload/image1/NguyenTayafficheLamarne11012017.jpg"></a>
 					<h4></h4>Journal La Marne | 11 jan. 2017				</li>
 				
 </ul>
