--- a/pressbook/catedetail/14/66.html
+++ b/pressbook/catedetail/14/66.html
@@ -73,7 +73,7 @@ category: pressbook
 	<div class="images">
 		<div class="large">
 			<a title="Magjournal77 | 12/04/2016" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/UneJournal.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/UneJournal.jpg">
 			</a>
 		</div>
 	</div>
