--- a/pressbook/catedetail/14/73.html
+++ b/pressbook/catedetail/14/73.html
@@ -73,7 +73,7 @@ category: pressbook
 	<div class="images">
 		<div class="large">
 			<a title="Un prix pour un artiste vietnamien" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/LaMarne270416.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/LaMarne270416.jpg">
 			</a>
 		</div>
 	</div>
