--- a/pressbook/catedetail/15/74.html
+++ b/pressbook/catedetail/15/74.html
@@ -73,7 +73,7 @@ category: pressbook
 	<div class="images">
 		<div class="large">
 			<a title="Nguyen Tay expose chez ses fans" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Lamarne022015.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/Lamarne022015.jpg">
 			</a>
 		</div>
 	</div>
