--- a/pressbook/catedetail/15/75.html
+++ b/pressbook/catedetail/15/75.html
@@ -73,7 +73,7 @@ category: pressbook
 	<div class="images">
 		<div class="large">
 			<a title="Trois artistes pour un regard sur la femme" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/LaMarne250315.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/LaMarne250315.jpg">
 			</a>
 		</div>
 	</div>
