--- a/pressbook/catedetail/17/84.html
+++ b/pressbook/catedetail/17/84.html
@@ -73,7 +73,7 @@ category: pressbook
 	<div class="images">
 		<div class="large">
 			<a title="Journal La Marne | 11 jan. 2017" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/NguyenTayafficheLamarne11012017.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/NguyenTayafficheLamarne11012017.jpg">
 			</a>
 		</div>
 	</div>
