--- a/catalogue/cate/5.html
+++ b/catalogue/cate/5.html
@@ -10,22 +10,22 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/5/42.html"><img width="185" alt="Dance alone" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/page%2020%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/42.html"><img width="185" alt="Dance alone" src="/assetsadmin/imagesupload/slideshowhome/page%2020%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Dance alone				</li>
 							<li >
-					<a href="../catedetail/5/41.html"><img width="185" alt="Tottery" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/page%2019%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/41.html"><img width="185" alt="Tottery" src="/assetsadmin/imagesupload/slideshowhome/page%2019%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Tottery				</li>
 							<li class="last">
-					<a href="../catedetail/5/20.html"><img width="185" alt="Alone" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/page%2013%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/20.html"><img width="185" alt="Alone" src="/assetsadmin/imagesupload/image2/page%2013%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Alone				</li>
 							<li >
-					<a href="../catedetail/5/19.html"><img width="185" alt="The Dream" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/page16%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/19.html"><img width="185" alt="The Dream" src="/assetsadmin/imagesupload/image1/page16%20TAYNGUYEN.jpg"></a>
 					<h4></h4>The Dream				</li>
 							<li >
-					<a href="../catedetail/5/18.html"><img width="185" alt="Sleep on boat" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/page%2015%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/18.html"><img width="185" alt="Sleep on boat" src="/assetsadmin/imagesupload/image1/page%2015%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Sleep on boat				</li>
 							<li class="last">
-					<a href="../catedetail/5/17.html"><img width="185" alt="Waiting" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/page%2014%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/5/17.html"><img width="185" alt="Waiting" src="/assetsadmin/imagesupload/image1/page%2014%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Waiting				</li>
 
 </ul>
