--- a/catalogue/cate/8.html
+++ b/catalogue/cate/8.html
@@ -10,19 +10,19 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/8/55.html"><img width="185" alt="EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg"></a>
+					<a href="../catedetail/8/55.html"><img width="185" alt="EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION" src="/assetsadmin/imagesupload/exhibitions/ExpoJUillet2015.jpg"></a>
 					<h4></h4>EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION				</li>
 							<li >
-					<a href="../catedetail/8/46.html"><img width="185" alt="Exposition D'ici... d'Asie... d'ailleurs - Hôpital Vaugirard - Paris (France)" src="http://www.nguyentay.art/assetsadmin/imagesupload/afficheIciAsieAilleurs.jpg"></a>
+					<a href="../catedetail/8/46.html"><img width="185" alt="Exposition D'ici... d'Asie... d'ailleurs - Hôpital Vaugirard - Paris (France)" src="/assetsadmin/imagesupload/afficheIciAsieAilleurs.jpg"></a>
 					<h4></h4>Exposition D'ici... d'Asie... d'ailleurs - Hôpital Vaugirard - Paris (France)				</li>
 							<li class="last">
-					<a href="../catedetail/8/45.html"><img width="185" alt="Exhibition in Bog Art Gallery - Brussels (Belguim)" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/afficheExpoBrussels.jpg"></a>
+					<a href="../catedetail/8/45.html"><img width="185" alt="Exhibition in Bog Art Gallery - Brussels (Belguim)" src="/assetsadmin/imagesupload/exhibitions/afficheExpoBrussels.jpg"></a>
 					<h4></h4>Exhibition in Bog Art Gallery - Brussels (Belguim)				</li>
 							<li >
-					<a href="../catedetail/8/44.html"><img width="185" alt="Exhibition in Galerie BDMC - Paris" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/2.jpg"></a>
+					<a href="../catedetail/8/44.html"><img width="185" alt="Exhibition in Galerie BDMC - Paris" src="/assetsadmin/imagesupload/slideshowhome/2.jpg"></a>
 					<h4></h4>Exhibition in Galerie BDMC - Paris				</li>
 							<li >
-					<a href="../catedetail/8/43.html"><img width="185" alt="Exposition Regard(s) sur la Femme - Serris (France)" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG"></a>
+					<a href="../catedetail/8/43.html"><img width="185" alt="Exposition Regard(s) sur la Femme - Serris (France)" src="/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG"></a>
 					<h4></h4>Exposition Regard(s) sur la Femme - Serris (France)				</li>
 
 </ul>
