--- a/catalogue/catedetail/12/69.html
+++ b/catalogue/catedetail/12/69.html
@@ -74,7 +74,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="My Garden - Mon Jardin" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/My%20Garden-Nguyen%20Tay.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/My%20Garden-Nguyen%20Tay.JPG">
 			</a>
 		</div>
 	</div>
