--- a/catalogue/catedetail/12/70.html
+++ b/catalogue/catedetail/12/70.html
@@ -74,7 +74,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Glance" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Glance.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/Glance.jpg">
 			</a>
 		</div>
 	</div>
