--- a/catalogue/catedetail/12/81.html
+++ b/catalogue/catedetail/12/81.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Marianne aux Camélias" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/Marianne.JPG">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/Marianne.JPG">
 			</a>
 		</div>
 	</div>
