--- a/catalogue/catedetail/18/85.html
+++ b/catalogue/catedetail/18/85.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Under the pomegranate tree - Sous le grenadier" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/UnderPomegranatetree.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image1/UnderPomegranatetree.jpg">
 			</a>
 		</div>
 	</div>
