--- a/catalogue/catedetail/4/72.html
+++ b/catalogue/catedetail/4/72.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Princess" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Princess2011.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/Princess2011.jpg">
 			</a>
 		</div>
 	</div>
