--- a/catalogue/catedetail/4/9.html
+++ b/catalogue/catedetail/4/9.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="My sister" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%208%20TAYNGUYEN.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/page%208%20TAYNGUYEN.jpg">
 			</a>
 		</div>
 	</div>
