--- a/catalogue/catedetail/7/33.html
+++ b/catalogue/catedetail/7/33.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="hide and seek" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/1.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image2/1.jpg">
 			</a>
 		</div>
 	</div>
@@ -92,8 +92,8 @@ category: catalogue
 				<div id="gallery1" class="gallery">
 					<ul>
 															<li>
-										<a href="http://www.nguyentay.art/assetsadmin/imagesupload/image2/1.jpg" title="" rel="lightbox[gallery1]">
-											<img src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/1.jpg" width="72" height="72" alt="" />
+										<a href="/assetsadmin/imagesupload/image2/1.jpg" title="" rel="lightbox[gallery1]">
+											<img src="/assetsadmin/imagesupload/image2/1.jpg" width="72" height="72" alt="" />
 										</a>
 									</li>
 														 
