--- a/catalogue/catedetail/9/47.html
+++ b/catalogue/catedetail/9/47.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Lady with Ao Dai" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/AoDai.png">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/AoDai.png">
 			</a>
 		</div>
 	</div>
