--- a/catalogue/catedetail/9/64.html
+++ b/catalogue/catedetail/9/64.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="On old brick" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/On%20old%20bricks.jpeg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/On%20old%20bricks.jpeg">
 			</a>
 		</div>
 	</div>
