--- a/catalogue/catedetail/9/65.html
+++ b/catalogue/catedetail/9/65.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="The look" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Thelook.jpeg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/Thelook.jpeg">
 			</a>
 		</div>
 	</div>
