--- a/catalogue/catedetail/9/77.html
+++ b/catalogue/catedetail/9/77.html
@@ -73,7 +73,7 @@ category: catalogue
 	<div class="images">
 		<div class="large">
 			<a title="Sleeper in the clouds (Blanket pattern)" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/SleeperIntheClouds.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/SleeperIntheClouds.jpg">
 			</a>
 		</div>
 	</div>
