--- a/exhibiton/cate/13.html
+++ b/exhibiton/cate/13.html
@@ -9,13 +9,13 @@ category: exhibition
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/13/87.html"><img width="185" alt="Exposition au défilé Fashion Glam Couture - Hôtel Renaissance Arc de Triomphe" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Renaissance.jpg"></a>
+					<a href="../catedetail/13/87.html"><img width="185" alt="Exposition au défilé Fashion Glam Couture - Hôtel Renaissance Arc de Triomphe" src="/assetsadmin/imagesupload/image2/Renaissance.jpg"></a>
 					<h4></h4>Exposition au défilé Fashion Glam Couture - Hôtel Renaissance Arc de Triomphe				</li>
 							<li >
-					<a href="../catedetail/13/59.html"><img width="185" alt="Nguyen Tay invité de l'Atelier éphémers - 28 février 2016" src="http://www.nguyentay.art/assetsadmin/imagesupload/Corps%20et%20femmes.jpg"></a>
+					<a href="../catedetail/13/59.html"><img width="185" alt="Nguyen Tay invité de l'Atelier éphémers - 28 février 2016" src="/assetsadmin/imagesupload/Corps%20et%20femmes.jpg"></a>
 					<h4></h4>Nguyen Tay invité de l'Atelier éphémers - 28 février 2016				</li>
 							<li class="last">
-					<a href="../catedetail/13/58.html"><img width="185" alt="Salon des amateurs d'arts" src="http://www.nguyentay.art/assetsadmin/imagesupload/arts.jpeg"></a>
+					<a href="../catedetail/13/58.html"><img width="185" alt="Salon des amateurs d'arts" src="/assetsadmin/imagesupload/arts.jpeg"></a>
 					<h4></h4>Salon des amateurs d'arts				</li>
 
 </ul>
