--- a/exhibiton/catedetail/10/57.html
+++ b/exhibiton/catedetail/10/57.html
@@ -73,7 +73,7 @@ category: exhibition
 	<div class="images">
 		<div class="large">
 			<a title="Les Dormeuses du Val" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/exhibitions/Dormeuses%20du%20Val%20.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/exhibitions/Dormeuses%20du%20Val%20.jpg">
 			</a>
 		</div>
 	</div>
