replace all image link to absolute

--- a/catalogue/catedetail/12/80.html
+++ b/catalogue/catedetail/12/80.html
@@ -69,7 +69,7 @@ category: catalogue
 
 <h2>Plum Flower ( Fleur de prunier )</h2>
 
-<form action="http://nguyentay.art/catalogue/catedetail/12/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/catalogue/catedetail/12/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
@@ -90,7 +90,7 @@ category: catalogue
 </form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
