--- a/catalogue/catedetail/18/85.html
+++ b/catalogue/catedetail/18/85.html
@@ -68,7 +68,7 @@ category: catalogue
 
 <h2>Under the pomegranate tree - Sous le grenadier</h2>
 
-<form action="http://nguyentay.art/catalogue/catedetail/18/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/catalogue/catedetail/18/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
@@ -89,7 +89,7 @@ category: catalogue
 </form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
