--- a/catalogue/catedetail/4/15.html
+++ b/catalogue/catedetail/4/15.html
@@ -104,7 +104,7 @@ category: catalogue
 		</form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
