--- a/pressbook/catedetail/14/66.html
+++ b/pressbook/catedetail/14/66.html
@@ -68,7 +68,7 @@ category: pressbook
 
 <h2>Magjournal77 | 12/04/2016</h2>
 
-<form action="http://nguyentay.art/pressbook/catedetail/14/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/pressbook/catedetail/14/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
@@ -90,7 +90,7 @@ category: pressbook
 </form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
