--- a/exhibiton/catedetail/10/56.html
+++ b/exhibiton/catedetail/10/56.html
@@ -68,7 +68,7 @@ category: exhibition
 
 <h2>EXPOSITION d'ÉTÉ - NGUYEN TAY - SUMMER EXHIBITION</h2>
 
-<form action="http://nguyentay.art/exhibiton/catedetail/10/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/exhibiton/catedetail/10/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
@@ -89,7 +89,7 @@ category: exhibition
 </form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
