--- a/pressbook/catedetail/15/76.html
+++ b/pressbook/catedetail/15/76.html
@@ -68,7 +68,7 @@ category: pressbook
 
 <h2>Exposition de Nguyen Tay dans Cap Vietnam</h2>
 
-<form action="http://nguyentay.art/pressbook/catedetail/15/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/pressbook/catedetail/15/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
@@ -94,7 +94,7 @@ mso-ansi-language:FR;mso-fareast-language:EN-US;mso-bidi-language:AR-SA"><a rel=
 </form>
 </div>
 
-<input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
+<input type="hidden" id="tmpurl" value="/" />
 
 <script type="text/javascript" src="../../../assets/js/jquery.1.2.3.js"></script>
 <script type="text/javascript" src="../../../assets/js/jquery.lightbox.js"></script>
