--- a/index.html
+++ b/index.html
@@ -99,50 +99,20 @@
 			<!--module_end--> 
 			<!-- End of main_left -->
 			<div class="main_rgt">
-				<script type="text/javascript">		
-//&lt;![CDATA[
-  window.addEvent('domready', function(){
-   // Load your images here
-   var data = [
-               //'kirkley_med.jpg','maude_med.jpg','row_of_trees_med.jpg'
-                '1.My Garden-Nguyen Tay.JPG','1.UnderPomegranatetree.jpg','2.JPG','2.Philippineslide.jpg','3. FeteduTet.jpg','3.JPG','page 10 TAYNGUYEN.jpg','page 12 TAYNGUYEN.jpg','page 14 TAYNGUYEN.jpg','page 15 TAYNGUYEN.jpg','page 18 TAYNGUYEN.jpg','page 19 TAYNGUYEN.jpg','page 21 TAYNGUYEN.jpg','page 4 TAYNGUYEN .jpg','page 6 TAYNGUYEN.jpg','photo copy.jpg',              ];
-   // Initialize the Slideshow instance
-   var myShow = new Slideshow('show2', data, { captions: true, controller: true, delay: 3000, linked:false, hu: '/assetsadmin/imagesupload/slideshowhome/', width: 651 });
-  });
-//]]&gt;
-</script>
 
-<div id="show2" style="display: block; position: relative; z-index: 0;">
-	<div class="slideshow-images" style="display: block; height: 307px; overflow: hidden; position: relative; width: 651px;">
-							<a><img width="651" height="670" src="/1.My&#32;Garden-Nguyen&#32;Tay.JPG"></a>
-									<a><img width="651" height="670" src="/1.UnderPomegranatetree.jpg"></a>
-									<a><img width="651" height="670" src="/2.JPG"></a>
-									<a><img width="651" height="670" src="/2.Philippineslide.jpg"></a>
-									<a><img width="651" height="670" src="/3.&#32;FeteduTet.jpg"></a>
-									<a><img width="651" height="670" src="/3.JPG"></a>
-									<a><img width="651" height="670" src="/page&#32;10&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;12&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;14&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;15&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;18&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;19&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;21&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;4&#32;TAYNGUYEN&#32;.jpg"></a>
-									<a><img width="651" height="670" src="/page&#32;6&#32;TAYNGUYEN.jpg"></a>
-									<a><img width="651" height="670" src="/photo&#32;copy.jpg"></a>
-						<div class="slideshow-loader" style="background-image: url(/&quot;css/loader-3.png&quot;);"></div>
-	</div>
-	<div class="slideshow-controller">
-		<ul>
-			<li class="first"><a title="First [Shift + Leftwards Arrow]"></a></li>
-			<li class="prev"><a title="Prev [Leftwards Arrow]"></a></li>
-			<li class="pause"><a title="Play / Pause [P]"></a></li>
-			<li class="next"><a title="Next [Rightwards Arrow]"></a></li>
-			<li class="last"><a title="Last [Shift + Rightwards Arrow]"></a></li>
-		</ul>
-	</div>
+<!--video id="vietnam" align="right" width="100px" autoplay="" loop="" playsinline="" preload="none" class="_1959669L"><source src="https://www.lebrassageestunerichesse.fr/animations/vietnam_desktop.m4v" type="video/mp4"></video-->
 
-</div>
+<img align="right" width="500px" src="/nguyentayheineken.jpg" />
+<br/><br/><br/><br/><br/><br/><br/><br/>
+<p>Happy and proud to reveal the limited edition bottle I designed for Heineken FR celebrating my country #Vietnam - Out in France from now and during the summer</p>
+<br/>
+
+<p>Labels and packaging : Rosbeef!</p>
+<br/>
+<p><a href="https://www.lebrassageestunerichesse.fr/pays/vietnam">#HeinekenTay</a></p>
+
+
+
 			</div><!-- End of main_rgt -->
 		</div>
 		
