--- a/catalogue/cate/8.html
+++ b/catalogue/cate/8.html
@@ -19,7 +19,7 @@ category: catalogue
 					<a href="../catedetail/8/45.html"><img width="185" alt="Exhibition in Bog Art Gallery - Brussels (Belguim)" src="/assetsadmin/imagesupload/exhibitions/afficheExpoBrussels.jpg"></a>
 					<h4></h4>Exhibition in Bog Art Gallery - Brussels (Belguim)				</li>
 							<li >
-					<a href="../catedetail/8/44.html"><img width="185" alt="Exhibition in Galerie BDMC - Paris" src="/assetsadmin/imagesupload/slideshowhome/2.jpg"></a>
+					<a href="../catedetail/8/44.html"><img width="185" alt="Exhibition in Galerie BDMC - Paris" src="/vmanager/assets/imagesupload/poster%20black%20RGB%202.jpg"></a>
 					<h4></h4>Exhibition in Galerie BDMC - Paris				</li>
 							<li >
 					<a href="../catedetail/8/43.html"><img width="185" alt="Exposition Regard(s) sur la Femme - Serris (France)" src="/assetsadmin/imagesupload/exhibitions/visu%20expo%20serris.JPG"></a>
